[package]
name = "rose-core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bollard = "0.19.2"
config = "0.15.14"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
